--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "express": "^4.21.0",
+    "express-fileupload": "^1.5.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/express-fileupload": "^1.5.1"
   }
 }
